--- a/ClassLibrary1/PL/Views/Account/Register.cshtml
+++ b/ClassLibrary1/PL/Views/Account/Register.cshtml
@@ -11,18 +11,11 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+            @Html.LabelFor(m => m.Login, new { @class = "col-md-2 control-label" })
             <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Email, new {@class = "form-control"})
+                @Html.TextBoxFor(m => m.Login, new {@class = "form-control"})
             </div>
-            @Html.ValidationMessageFor(m => m.Email)
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Name, new {@class = "form-control"})
-            </div>
-            @Html.ValidationMessageFor(m => m.Name)
+            @Html.ValidationMessageFor(m => m.Login)
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
