--- a/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
+++ b/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("Application name", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})
+            @Html.ActionLink("Belarus Trade & Invest", "Index", "Home", new {area = ""}, new {@class = "navbar-brand"})
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -29,11 +29,10 @@
 </div>
 <div class="row panel" style="margin: 10px;">
     <div class="col-xs-2">
-        <ul class="nav nav-tabs nav-pills nav-stacked" id="panelList" style="border-bottom:none">
             @Html.Action("LeftMenu", "Nav")
-        </ul>
     </div>
     <div class="col-xs-8">
+        @Html.Partial("~/Views/Nav/TopMenu.cshtml")
         @RenderBody()
     </div>
 </div>
@@ -44,5 +43,13 @@
     @Scripts.Render("~/bundles/jQueryUI")
     @Scripts.Render("~/bundles/myScript")
     @RenderSection("scripts", required: false)
+
+    <script>
+        $(function () {
+            $('#addBtn').click(function () {
+                $('#myTab a:first').tab('show');
+            });
+  })
+    </script>
 </body>
 </html>
