--- a/ClassLibrary1/PL/Content/myStyle/layout.css
+++ b/ClassLibrary1/PL/Content/myStyle/layout.css
@@ -63,3 +63,21 @@ input[type="checkbox"].input-validation-error {
         border: 1px #e6e6fa solid;
         padding: 10px;
     }
+
+    .loader {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #3498db;
+    border-radius: 50%;
+    width: 45px;
+    height: 45px;
+    animation: spin 2s linear infinite;
+    position: absolute;
+    margin: 3px auto !important;
+    left: 45%;
+    display: none;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
