some fucking change

--- a/ClassLibrary1/PL/Content/myStyle/layout.css
+++ b/ClassLibrary1/PL/Content/myStyle/layout.css
@@ -64,7 +64,7 @@ input[type="checkbox"].input-validation-error {
         padding: 10px;
     }
 
-    .loader {
+    #loader {
     border: 8px solid #f3f3f3;
     border-top: 8px solid #3498db;
     border-radius: 50%;
