--- a/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
+++ b/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/myStyle")
     @Styles.Render("~/Content/jQueryUI")
+    @Styles.Render("~/Content/DataTables")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
@@ -43,6 +44,7 @@
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/jQueryUI")
     @Scripts.Render("~/bundles/myScript")
+    @Scripts.Render("~/bundles/dataTables")
     @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.js")
     @RenderSection("scripts", required: false)
 
