--- a/ClassLibrary1/PL/Views/Nav/TopMenu.cshtml
+++ b/ClassLibrary1/PL/Views/Nav/TopMenu.cshtml
@@ -45,11 +45,12 @@
                 </ul>
             </div>
         </div>
-        @using (Ajax.BeginForm("TradeManagementTable", "Nav", "Nav",new AjaxOptions { LoadingElementId = "loader",
+        @*@using (Ajax.BeginForm("TradeManagementTable", "Nav", "Nav",new AjaxOptions { LoadingElementId = "loader",
             UpdateTargetId = "trade-management-table-results" }, new { id = "trade-management-table" }))
         {
             @Html.Hidden("id", 1);
-        }
+        }*@
+        @Html.Partial("~/Views/Nav/TradeManagementTable.cshtml")
         <div id="trade-management-table-results"></div>
     </div>
     <div class="tab-pane fade in" id="viewManagement">Under construction...</div>
