--- a/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
+++ b/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
@@ -7,7 +7,6 @@
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/myStyle")
     @Styles.Render("~/Content/jQueryUI")
-    @Styles.Render("~/Content/DataTables")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
@@ -46,7 +45,32 @@
     @Scripts.Render("~/bundles/myScript")
     @Scripts.Render("~/bundles/dataTables")
     @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.js")
+    @Scripts.Render("~/bundles/dataTables")
     @RenderSection("scripts", required: false)
-
+<script>
+    $(document).ready(function () {
+        $('#trade-management-jq-table').DataTable({
+            "ajax": {
+                "url": "/Nav/TradeManagementTable",
+                "type": "GET",
+                "datatype": "json"
+            },
+            "columns": [
+                    { "data": "Name", "autoWidth": true },
+                    { "data": "SymbolName", "autoWidth": true },
+                    { "data": "OpenPrice", "autoWidth": true },
+                    { "data": "OpenDate", "autoWidth": true },
+                    { "data": "OpenWeight", "autoWidth": true },
+                    { "data": "CurrentPrice", "autoWidth": true },
+                    { "data": "TradeStatus", "autoWidth": true },
+                    { "data": "ClosePrice", "autoWidth": true },
+                    { "data": "CloseDate", "autoWidth": true },
+                    { "data": "Gain", "autoWidth": true },
+                    { "data": "AbsoluteGain", "autoWidth": true },
+                    { "data": "MaxGain", "autoWidth": true }
+            ]
+        });
+    });
+</script>
 </body>
 </html>
