--- a/ClassLibrary1/PL/Views/Nav/TopMenu.cshtml
+++ b/ClassLibrary1/PL/Views/Nav/TopMenu.cshtml
@@ -17,6 +17,9 @@
     </div>
     <div class="tab-pane fade in active" id="tradeManagement">
         @Html.Partial("~/Views/Nav/TradeManagementTable.cshtml")
+        <div id="symbolNotFoundDialog">
+            Symbol was not found.
+        </div>
     </div>
     <div class="tab-pane fade in" id="viewManagement">Under construction...</div>
     <div class="tab-pane fade in" id="viewTemplateManagement">Under construction...</div>
