--- a/ClassLibrary1/PL/Views/Position/Save.cshtml
+++ b/ClassLibrary1/PL/Views/Position/Save.cshtml
@@ -1,19 +1,56 @@
 ﻿@model PL.Models.PositionModel
-<h2>Save</h2>
+<h2 style="margin-top: 5px;">Save</h2>
+
+<style>
+    .bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
+    width: 280px;
+}
+</style>
+
+@{
+    #region
+    var tradeTypelist = new List<SelectListItem>
+            {
+                new SelectListItem
+                {
+                    Text = "Long",
+                    Value = "Long"
+                },
+                new SelectListItem
+                {
+                    Text = "Short",
+                    Value = "Short"
+                }
+            };
+    var TradeStatuslist = new List<SelectListItem>
+            {
+                new SelectListItem
+                {
+                    Text = "Open",
+                    Value = "Open"
+                },
+                new SelectListItem
+                {
+                    Text = "Close",
+                    Value = "Close"
+                },
+                new SelectListItem
+                {
+                    Text = "Wait",
+                    Value = "Wait"
+                }
+            };
+    #endregion
+}
+
 @using (Html.BeginForm("Save", "Position", FormMethod.Post, new { id = "popupForm" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(m => m.Id);
-    @Html.HiddenFor(m => m.OpenDate);
-    @Html.HiddenFor(m => m.CloseDate);
     @Html.HiddenFor(m => m.Gain);
     @Html.HiddenFor(m => m.AbsoluteGain);
     @Html.HiddenFor(m => m.MaxGain);
-    @Html.HiddenFor(m => m.CloseDate);
-    @Html.HiddenFor(m => m.CurrentPrice);
-    @Html.HiddenFor(m => m.OpenPrice);
-    @Html.HiddenFor(m => m.ClosePrice);
 
     <div class="form-group">
         @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
@@ -21,9 +58,17 @@
         @Html.ValidationMessageFor(a => a.Name)
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.SymbolName, new { @class = "col-md-2 control-label" })
-        @Html.TextBoxFor(a => a.SymbolName, new { @class = "form-control" })
+        @Html.LabelFor(m => m.SymbolName, new {@class = "col-md-2 control-label"})
+        @Html.TextBoxFor(a => a.SymbolName, new
+        {
+            @class = "form-control", id = "input-symbol-search",
+            data_autocomplete_source = Url.Action("AutocompleteSymbolSearch", "Nav"), onChange = "completeInputData()"
+        })
         @Html.ValidationMessageFor(a => a.SymbolName)
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.TradeType, new { style = "margin-right: 15px;" })
+        @Html.DropDownListFor(model => model.TradeType, tradeTypelist, new { @class = "selectpicker", style = "width: 280px;" })
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.OpenWeight, new {@class = "col-md-2 control-label"})
@@ -31,8 +76,104 @@
         @Html.ValidationMessageFor(a => a.OpenWeight)
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.OpenDate, new {@class = "col-md-2 control-label", style = "white-space: nowrap; overflow: hidden; margin-left: -5px; margin-right: 5px;" })
+        <div class='input-group date' id='datetimepicker1' style="padding-right: 190px;">
+            @Html.TextBoxFor(a => a.OpenDate, new {@class = "form-control", style= "width: 241px;" })
+            <span class="input-group-addon">
+                <span class="glyphicon glyphicon-calendar"></span>
+            </span>
+        </div>
+        @Html.ValidationMessageFor(a => a.OpenDate)
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.OpenPrice, new { @class = "col-md-2 control-label", style = "white-space: nowrap; overflow: hidden; margin-left: -5px; margin-right: 5px;" })
+        @Html.TextBoxFor(a => a.OpenPrice, new { @class = "form-control fucking-decimal-input", @readonly = true })
+        @Html.ValidationMessageFor(a => a.OpenPrice)
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.TradeStatus, new { style = "margin-right: 5px;" })
+        @Html.DropDownListFor(model => model.TradeStatus, TradeStatuslist, new
+   {
+       id= "TradeStatus", @class = "selectpicker", style = "width: 280px;", onchange = "tradeStatusCheck(this);"
+   })
+    </div>
+    <div id="FromForClosePosition" style="display: none">
+        <div class="form-group">
+            @Html.LabelFor(m => m.CloseDate, new { @class = "col-md-2 control-label", style = "white-space: nowrap; overflow: hidden; margin-left: -5px; margin-right: 5px; " })
+            <div class='input-group date' id='datetimepicker2' style="padding-right: 190px;">
+                @Html.TextBoxFor(a => a.CloseDate, new { @class = "form-control", style = "width: 241px;" })
+                <span class="input-group-addon">
+                    <span class="glyphicon glyphicon-calendar"></span>
+                </span>
+            </div>
+            @Html.ValidationMessageFor(a => a.CloseDate)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.ClosePrice, new { @class = "col-md-2 control-label", style = "white-space: nowrap; overflow: hidden; margin-left: -5px; margin-right: 5px;" })
+            @Html.TextBoxFor(a => a.ClosePrice, new { @class = "form-control fucking-decimal-input", @readonly = true })
+            @Html.ValidationMessageFor(a => a.ClosePrice)
+        </div>
+    </div>
+
+    <div class="form-group">
         <div class="col-md-offset-2">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Save" class="btn btn-default" id="FormSaveSubmit"/>
         </div>
     </div>
 }
+
+<script type="text/javascript">
+    
+    function tradeStatusCheck(that) {
+        if (that.value == "Close") {
+            $("#FromForClosePosition").slideDown();
+        }
+        else {
+            $("#FromForClosePosition").slideUp();
+        }
+    }
+
+
+    $(function () {
+
+        if ($("#TradeStatus option:selected").text() == "Close") {
+            $("#FromForClosePosition").css("display","block")
+        }
+
+        $(".fucking-decimal-input").each(function () {
+            this.value = this.value.replace(/,/g, '.');
+        });
+
+        $('#datetimepicker1').datetimepicker({
+            format: 'DD/MM/YYYY'
+        });
+        $('#datetimepicker2').datetimepicker({
+            format: 'DD/MM/YYYY'
+        });
+        $('#OpenDate').removeAttr("data-val-date");
+    });
+
+    $(".selectpicker").selectpicker({
+        "title": "Select Options"
+    }).selectpicker("render");
+
+    $('#input-symbol-search').autocomplete({
+        autoFocus: true,
+        source: $('#input-symbol-search').attr("data-autocomplete-source")
+    });
+
+    $("#symbolNotFoundDialog").dialog({
+        autoOpen: false,
+        title: "Information",
+        draggable: false,
+        resizable: false,
+        closeText: "",
+        modal: true,
+        buttons: {
+            'Ok': function () {
+                $(this).dialog('close');
+            }
+        }
+    });
+</script>
+
