--- a/ClassLibrary1/PL/Views/Position/Delete.cshtml
+++ b/ClassLibrary1/PL/Views/Position/Delete.cshtml
@@ -1,9 +1,9 @@
-﻿@model PL.Models.PositionModel
+﻿
 
 <h2>Delete</h2>
 @using (Html.BeginForm("Delete", "Position", FormMethod.Post, new { id = "popupForm" }))
 {
-    @Html.HiddenFor(a => a.Id)
+    <input type="hidden" value="@ViewBag.Id"/>
     <p>Are you sure you want to delete this record?</p>
     <div>
         <input type="submit" value="Delete" />
